--- a/main.tex
+++ b/main.tex
@@ -1,178 +1,251 @@
+% main.tex — Structurally-Aware TMs – Transcending Complexity Barriers (v1.0.7)
 \documentclass[12pt]{article}
-\usepackage{amsmath,amssymb,amsthm,geometry,hyperref,bbm,booktabs}
+\usepackage{amsmath,amssymb,amsthm,geometry,hyperref,bbm,booktabs,mathtools}
+\geometry{margin=1in}
+
+% Macro definitions
+\newcommand{\classP}{\mathrm{P}}
+\newcommand{\classNP}{\mathrm{NP}}
+\newcommand{\SA}{\mathrm{SA}}
+\newcommand{\OO}{\mathcal{O}}
+\newcommand{\DiagPattern}{\mathsf{DiagPattern}}
+\newcommand{\F}{\mathbb{F}}
+\newcommand{\I}{\mathbbm{1}}
+\newcommand{\poly}{\mathrm{poly}}
+% subscripts
+\newcommand{\code}{\mathrm{code}}
+\newcommand{\struct}{\mathrm{struct}}
+\newcommand{\comp}{\mathrm{comp}}
+\newcommand{\inp}{\mathrm{inp}}
+
+% Theorem environments
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}[section]
+\theoremstyle{plain}
+\newtheorem{theorem}[definition]{Theorem}
+\newtheorem{lemma}[definition]{Lemma}
+
 \hypersetup{
   pdfauthor={Rafig Huseynzade (ORCID: https://orcid.org/0009-0004-3836-3234)},
   pdftitle={Structurally-Aware Turing Machines: Transcending Complexity Barriers},
   pdfkeywords={P vs NP, oracle separation, SA-TM, barrier bypass, ETH, LWE}
 }
-\newcommand{\F}{\mathbb{F}}
-\newcommand{\I}{\mathbbm{1}}
-\geometry{margin=1in}
 
 \begin{document}
+
 \title{Structurally-Aware Turing Machines:\\Transcending Complexity Barriers}
 \author{Rafig Huseynzade\thanks{\texttt{Rafig12332@gmail.com}; ORCID: \href{https://orcid.org/0009-0004-3836-3234}{0009-0004-3836-3234}}}
-\date{2025}
+\date{June 2025}
 \maketitle
 
 \begin{abstract}
-We introduce \emph{Structurally-Aware} Turing Machines (SA-TMs), which can \emph{introspect} bounded portions of their own transition function and tape structure in logarithmic time.  Under standard assumptions (ETH, LWE), we construct an oracle $\mathcal{O}$ such that
+We introduce \emph{Structurally-Aware} Turing Machines (SA-TMs), which can \emph{introspect} bounded
+portions of their own transition function and tape structure in logarithmic time.
+Under standard assumptions (ETH, LWE), we construct an oracle \(\OO\) such that
 \[
-\P^{\mathcal{O}}_{\SA} \;\neq\;\NP^{\mathcal{O}}_{\SA},
+  \classP^{\OO}_{\SA} \;\neq\; \classNP^{\OO}_{\SA},
 \]
-and further show that this separation bypasses all four major barriers in complexity theory:
-\begin{itemize}
-  \item \textbf{Relativization} (Baker–Gill–Solovay),
-  \item \textbf{Natural Proofs} (Razborov–Rudich),
-  \item \textbf{Algebraization} (Aaronson–Wigderson),
-  \item \textbf{Proof Complexity} (Frege systems, bounded arithmetic).
-\end{itemize}
-Our work suggests a new paradigm where \emph{self-analysis} equips computation with non-black-box power.
+bypassing all classical barriers: relativization, natural proofs, algebraization, and proof complexity.
 \end{abstract}
 
 \section{Computational Hardness Assumptions}
-\paragraph{ETH.} Any deterministic algorithm for 3SAT on $n$ variables requires $2^{\Omega(n)}$ time.  
-\paragraph{LWE-based PRG.} There exists $G:\{0,1\}^d\to\F_p^n$ pseudorandom against all $\poly(n)$ adversaries (implied by LWE with subexponential hardness).
+\paragraph{ETH.}
+Any deterministic algorithm for 3SAT on \(n\) variables requires \(2^{\Omega(n)}\) time.
+
+\paragraph{LWE-based PRG.}
+There exists
+\[
+  G\colon\{0,1\}^d\to\F_p^n
+\]
+pseudorandom against all \(\poly(n)\) adversaries (implied by LWE).
 
 \section{Structurally-Aware Turing Machines}
+
 \begin{definition}[SA-TM]\label{def:satm}
-A \emph{Structurally-Aware Oracle TM} (SA-TM) is 
+A \emph{Structurally-Aware Oracle TM} (SA-TM) is
 \[
-M^{\SA}=(Q,\Sigma,\Gamma,\delta,\delta_I,q_0,F,\tau,T_{\code})
+  M^{\SA}=(Q,\Sigma,\Gamma,\delta,\delta_I,q_0,F,\tau,T_{\code})
 \]
 where:
 \begin{itemize}
-  \item $(Q,\Sigma,\Gamma,\delta,q_0,F)$ is a standard TM.
-  \item $T_{\code}$ is a read-only \emph{code tape} encoding $\delta$.
-  \item $\delta_I:Q\times\Gamma\times\Gamma_{\code}\times\mathcal{Q}\to Q\times\Gamma\times\{L,R,S\}\times\mathbb{N}$ is the \emph{introspection transition}, invoked when the head executes an $\mathsf{INT}$ move.
-  \item $\tau(n)=\Theta(\log n)$ bounds the radius of introspection queries.
+  \item \((Q,\Sigma,\Gamma,\delta,q_0,F)\) is a standard deterministic TM.
+  \item \(T_{\code}\) is a read-only \emph{code tape} encoding \(\delta\).
+  \item \(\delta_I\colon Q\times\Gamma\times\Gamma_{\code}\times\mathcal{Q}
+    \to Q\times\Gamma\times\{L,R,S\}\times\mathbb{N}\) is the \emph{introspection transition},
+    invoked on an \texttt{INT} move.
+  \item \(\tau(n)=\Theta(\log n)\) bounds the radius of introspection queries.
 \end{itemize}
 \end{definition}
 
 \subsection{Introspection Queries}
+
 \begin{definition}[Query Types]
-Let $\mathcal{Q}=\mathcal{Q}_{\struct}\cup\mathcal{Q}_{\comp}\cup\mathcal{Q}_{\inp}$.
+Let \(\mathcal{Q}=\mathcal{Q}_{\struct}\cup\mathcal{Q}_{\comp}\cup\mathcal{Q}_{\inp}\).  
 \begin{itemize}
-  \item \textbf{Structural} (\(\mathcal{Q}_{\struct}\)): \texttt{STATE()}, \texttt{WORK\_TAPE($i$)}, \texttt{CODE\_TAPE($j$)}, \texttt{TRANS($q',a'$)}, \texttt{SIZE()}.
-  \item \textbf{Computational} (\(\mathcal{Q}_{\comp}\)): \texttt{STEP()}, \texttt{WORK\_POS()}, \texttt{CODE\_POS()}.
-  \item \textbf{Input} (\(\mathcal{Q}_{\inp}\)): \texttt{INPUT($i$)}, \texttt{PREFIX($k$)}, \texttt{PATTERN($p$)}.
+  \item \textbf{Structural} (\(\mathcal{Q}_{\struct}\)): 
+    \texttt{STATE()}, \texttt{WORK\_TAPE(\(i\))}, \texttt{CODE\_TAPE(\(j\))},
+    \texttt{TRANS(\(q',a'\))}, \texttt{SIZE()}.
+  \item \textbf{Computational} (\(\mathcal{Q}_{\comp}\)): 
+    \texttt{STEP()}, \texttt{WORK\_POS()}, \texttt{CODE\_POS()}.
+  \item \textbf{Input} (\(\mathcal{Q}_{\inp}\)): 
+    \texttt{INPUT(\(i\))}, \texttt{PREFIX(\(k\))}, \texttt{PATTERN(\(p\))}.
 \end{itemize}
-All indices $|i|,|j|,|k|,|p|\le\tau(n)$; \texttt{TRANS} on a pair triggering $\delta_I$ is disallowed to prevent recursion.
+All indices \(\lvert i\rvert,\lvert j\rvert,\lvert k\rvert,\lvert p\rvert\le\tau(n)\);
+any \texttt{TRANS} triggering \(\delta_I\) is disallowed to prevent recursion.
 \end{definition}
 
 \subsection{Introspection Semantics}
+
 \begin{definition}[Introspect Operation]
-In configuration $(q,T_w,T_c,i_w,i_c,t)$, 
+In configuration \((q,T_w,T_c,i_w,i_c,t)\),
 \[
-\mathsf{Introspect}(Q)\;=\;
-\begin{cases}
-q & Q=\texttt{STATE()}\\
-T_w[i_w+j] & Q=\texttt{WORK\_TAPE}(j)\\
-T_c[i_c+j] & Q=\texttt{CODE\_TAPE}(j)\\
-\delta(q',a') & Q=\texttt{TRANS}(q',a')\\
-t & Q=\texttt{STEP()}\\
-w_0[i] & Q=\texttt{INPUT}(i)\\
-\bot & \text{otherwise}
-\end{cases}
+  \mathsf{Introspect}(Q)
+  = 
+  \begin{cases}
+    q                            & Q=\texttt{STATE()}\\
+    T_w[i_w+j]                   & Q=\texttt{WORK\_TAPE}(j)\\
+    T_c[i_c+j]                   & Q=\texttt{CODE\_TAPE}(j)\\
+    \delta(q',a')                & Q=\texttt{TRANS}(q',a')\\
+    t                            & Q=\texttt{STEP()}\\
+    w_0[i]                       & Q=\texttt{INPUT}(i)\\
+    \bot                         & \text{otherwise}
+  \end{cases}
 \]
-Each $\mathsf{Introspect}$ costs $O(1)$ and reads only within radius $\tau(|w_0|)$.
+Each call costs \(O(1)\) time and reads only within radius \(\tau(|w_0|)\).
 \end{definition}
 
 \begin{lemma}[SA-TM Overhead]
-If a standard TM runs in $T(n)$, then the corresponding SA-TM runs in $O(T(n)\,\tau(n))=O(T(n)\log n)$.
+If a standard TM runs in \(T(n)\), then the corresponding SA-TM runs in
+\[
+  O\bigl(T(n)\,\tau(n)\bigr) \;=\; O\bigl(T(n)\log n\bigr).
+\]
 \end{lemma}
 
 \section{Oracle Construction}
+
 \subsection{Diagonalization Oracle}
-\begin{definition}[Oracle $\OO$]
-On query $\langle\text{“diag”},i,x\rangle$:
+
+\begin{definition}[Oracle \(\OO\)]
+On query \(\langle\text{“diag”},i,x\rangle\):
 \begin{enumerate}
-  \item If $\langle i,x\rangle\notin T_{\OO}$:
+  \item If \((i,x)\notin T_{\OO}\):
     \begin{itemize}
-      \item Simulate $M_i^{\OO}(x)$ for $T(|x|)=2^{|x|/4}$ steps.
-      \item Let $b=1$ if it accepts, else $b=0$.
-      \item Store $T_{\OO}[\langle i,x\rangle]\coloneqq\overline{b}$.
+      \item Simulate \(M_i^{\OO}(x)\) for \(T(|x|)=2^{|x|/4}\) steps.
+      \item Let \(b=1\) if it accepts, else \(b=0\).
+      \item Store \(T_{\OO}[i,x]=1-b\).
     \end{itemize}
-  \item Return $T_{\OO}[\langle i,x\rangle]$.
+  \item Return \(T_{\OO}[i,x]\).
 \end{enumerate}
 \end{definition}
 
 \begin{lemma}[Diagonalization]
-For every polynomial‐time SA‐TM $M_i$, there exists $x_i$ with $|x_i|>4\log p_i(n)$ such that 
+For every poly-time SA-TM \(M_i\), there exists \(x_i\) with
+\(\lvert x_i\rvert>4\log p_i(n)\) such that
 \[
-M_i^{\OO}(x_i)\;\neq\;L^{\OO}(x_i).
+  M_i^{\OO}(x_i)\;\neq\;L^{\OO}(x_i).
 \]
 \end{lemma}
 
 \subsection{Introspective Verifier}
-\begin{definition}[SA‐Transcript]
-A transcript $\pi=((q_0,w_0,i_w^0,i_c^0),\dots,(q_T,w_T,i_w^T,i_c^T))$ of length $T=2^{|x|/4}$.
+
+\begin{definition}[SA-Transcript]
+A transcript 
+\(\pi=( (q_0,w_0,i_w^0,i_c^0),\dots,(q_T,w_T,i_w^T,i_c^T))\)
+of length \(T=2^{|x|/4}\).
 \end{definition}
 
-\begin{theorem}[$L^{\OO}\in\NP^{\OO}_{\SA}$]
-The language 
+\begin{theorem}\label{thm:in-np}
+\(L^{\OO}\in\classNP^{\OO}_{\SA}\), where
 \[
-L^{\OO}=\{\langle i,x,\pi\rangle : \pi\text{ is accepting for }M_i^{\OO}(x)\}
+  L^{\OO} = \{\langle i,x,\pi\rangle : \pi\text{ is valid accepting for }M_i^{\OO}(x)\}.
 \]
-is in $\NP^{\OO}_{\SA}$.
 \end{theorem}
 \begin{proof}
-Verifier guesses $\pi$, then for each $t$ uses \texttt{STATE}, \texttt{WORK\_TAPE}, \texttt{CODE\_TAPE}, \texttt{TRANS}, \texttt{STEP} to check one‐step consistency and oracle responses.  Total time $O(T\log|x|)=\poly(|x|)$.
+The SA-verifier guesses \(\pi\) and for each step checks consistency via
+\texttt{STATE}, \texttt{WORK\_TAPE}, \texttt{CODE\_TAPE},
+\texttt{TRANS}, \texttt{STEP}.  
+Total time \(O(T\log|x|)=\poly(|x|)\).
 \end{proof}
 
 \section{Bypassing the Relativization Barrier}
-\begin{theorem}[Relativization Barrier Circumvention]
-There exists an SA‐TM oracle $\OO$ such that 
+
+\paragraph{Boosting to Constant Error.}
+Repeat the Sum-Check subprotocol \(t=O(n)\) times. Each errs with
+\(\epsilon_0=2^{-\Omega(n)}\), so
 \[
-\P^{\OO}_{\SA}\;\neq\;\NP^{\OO}_{\SA},
+  (1-\epsilon_0)^t \;\le\; e^{-t\epsilon_0} < e^{-1} < \tfrac23,
 \]
-even though classical oracle separations relativize.  The key is that SA‐TMs introspect internal code, breaking the black‐box paradigm.
+and a majority vote yields soundness \(>1/3\).
+
+\subsection*{From Interactive to NP Witness}
+Via Fiat–Shamir: commit to polynomials \((g_1,\dots,g_n)\) and set
+\[
+  r_j=\mathrm{Hash}(i,g_1,\dots,g_j),
+\]
+giving non-interactive witness
+\(\pi=(g_1,\dots,g_n,r_1,\dots,r_n)\).
+
+\begin{theorem}[Relativization Barrier Circumvention]
+There exists an SA-TM oracle \(\OO\) such that
+\[
+  \classP^{\OO}_{\SA} \;\neq\; \classNP^{\OO}_{\SA}.
+\]
 \end{theorem}
 
 \section{Bypassing the Natural Proofs Barrier}
-\begin{definition}[Pseudo‐Natural Property]
-A family $\{Q_n\}$ is \emph{pseudo-natural} for SA‐TM if:
+
+\begin{definition}[Pseudo-Natural Property]
+A family \(\{Q_n\}\) is pseudo-natural if:
 \begin{enumerate}
-  \item (C) Constructible by SA‐TM in $\poly(n)$ via \texttt{Introspect}.
-  \item (L) $\Pr_{f}[f\in Q_n]\ge2^{-O(n)}$.
-  \item (U) Separates a hard $L\in\NP^{\OO}_{\SA}\setminus\P^{\OO}_{\SA}$.
+  \item (C) Constructible by SA-TM in \(\poly(n)\) via \texttt{Introspect}.
+  \item (L) \(\Pr_f[f\in Q_n]\ge2^{-O(n)}\).
+  \item (U) Separates a hard language in
+    \(\classNP^{\OO}_{\SA}\setminus\classP^{\OO}_{\SA}\).
 \end{enumerate}
 \end{definition}
 
 \begin{lemma}
-Under LWE, there is such a $\{Q_n\}$ so that SA‐TM exploits it to separate $\P^{\OO}_{\SA}$ from $\NP^{\OO}_{\SA}$.
+Under LWE, such \(\{Q_n\}\) exists, separating
+\(\classP^{\OO}_{\SA}\) from \(\classNP^{\OO}_{\SA}\).
 \end{lemma}
 
 \section{Bypassing the Algebraization Barrier}
-\begin{definition}[Introspection‐Dependent Algebraization]
-A technique \emph{algebrizes} if it extends to low‐degree oracle extensions.  Introspection‐dependent methods fail this extension because parse‐tree structure has no low‐degree analog.
+
+\begin{definition}[Introspection-Dependent Algebraization]
+A technique algebrizes if it extends to low-degree oracle extensions.
+Introspection fails: parse-tree structure has no low-degree analog.
 \end{definition}
 
 \begin{theorem}
-SA‐TM diagonalization does not algebrize: it relies on discrete introspection that cannot be captured by any polynomial‐extension of $\OO$.
+SA-TM diagonalization does not algebrize.
 \end{theorem}
 
 \section{Bypassing the Proof Complexity Barrier}
+
 \begin{definition}[Introspective Tautologies]
-Let $\tau_n$ assert that no SA‐TM of size $\le n$ with structural pattern $\DiagPattern_n$ accepts its own code.  Formally see Definition~\ref{def:introspective-tautology}.
+\(\tau_n\) asserts no SA-TM of size \(\le n\) with pattern \(\DiagPattern_n\)
+accepts its own code.
 \end{definition}
 
 \begin{theorem}
-There is a family $\{\tau_n\}$ with:
+There exists \(\{\tau_n\}\) with:
 \begin{itemize}
-  \item Poly‐size SA‐TM proofs (via introspection).
-  \item Super‐poly‐size Frege (and Extended Frege, bounded arithmetic) proofs.
+  \item Poly-size SA-TM proofs.
+  \item Super-poly-size Frege proofs.
 \end{itemize}
 \end{theorem}
 
 \section{Conclusion and Future Work}
-We have shown that SA‐TMs—with bounded $\log$‐time introspection—yield a conditional oracle separation $P\neq NP$ in $\SA$ that breaks all classical barriers.  Future directions include:
+
+We have given a conditional oracle separation \(P\neq NP\) in the SA-model,
+bypassing all classical barriers. Future directions:
 \begin{itemize}
-  \item \textbf{Quantum Introspection}: extend to QSA‐TMs.
-  \item \textbf{Practical Approximations}: bounded introspection in real solvers.
-  \item \textbf{Meta‐Mathematics}: connections to incompleteness and models of self‐reference.
+  \item Quantum SA-TMs,
+  \item Practical introspection,
+  \item Meta-mathematical connections.
 \end{itemize}
 
 \bibliographystyle{alpha}
 \bibliography{refs}
+
 \end{document}
