bib: add AB09, Sip12, Raz87 and fix duplicates

--- a/refs.bib
+++ b/refs.bib
@@ -90,3 +90,30 @@
   note      = {Report 2022/1297},
 }
 
+@book{AB09,
+  author    = {Sanjeev Arora and Boaz Barak},
+  title     = {Computational Complexity: A Modern Approach},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  isbn      = {9780521424264}
+}
+
+@book{Sip12,
+  author    = {Michael Sipser},
+  title     = {Introduction to the Theory of Computation},
+  edition   = {3},
+  publisher = {Cengage Learning},
+  year      = {2012},
+  isbn      = {9781133187790}
+}
+
+@article{Raz87,
+  author  = {Razborov, Alexander A.},
+  title   = {Lower bounds for the monotone complexity of some Boolean functions},
+  journal = {Doklady Akademii Nauk SSSR},
+  year    = {1987},
+  volume  = {281},
+  number  = {4},
+  pages   = {798--801},
+  note    = {English translation: \emph{Math. Notes} 41(6):333--338, 1987}
+}
