--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,4 @@
+
 @article{BGS75,
   author  = {Baker, T. and Gill, J. and Solovay, R.},
   title   = {Relativizations of the {P} vs {NP} Question},
@@ -5,15 +6,15 @@
   year    = {1975},
   volume  = {4},
   number  = {4},
-  pages   = {431--442},
+  pages   = {431--442}
 }
 
 @inproceedings{RR97,
   author    = {Razborov, A. and Rudich, S.},
   title     = {Natural Proofs},
-  booktitle = {STOC ’97},
-  year      = {1997},
+  booktitle = {Proceedings of STOC '97},
   pages     = {204--213},
+  year      = {1997}
 }
 
 @article{AW09,
@@ -23,97 +24,136 @@
   year    = {2009},
   volume  = {1},
   number  = {1},
-  pages   = {2},
+  pages   = {1--54}
+}
+
+@article{Krajicek2025,
+  author  = {Jan Krajicek},
+  title   = {On NP ∩ coNP proof complexity generators},
+  journal = {arXiv preprint arXiv:2506.20221},
+  year    = {2025}
+}
+
+@book{Sipser06,
+  author    = {Michael Sipser},
+  title     = {Introduction to the Theory of Computation},
+  publisher = {Cengage Learning},
+  year      = {2006},
+  edition   = {2nd}
+}
+
+@article{Cook71,
+  author  = {Stephen Cook},
+  title   = {The complexity of theorem-proving procedures},
+  journal = {Proceedings of the third annual ACM symposium on Theory of computing},
+  pages   = {151--158},
+  year    = {1971}
+}
+
+@article{Karp72,
+  author  = {Richard M. Karp},
+  title   = {Reducibility among Combinatorial Problems},
+  journal = {Complexity of Computer Computations},
+  pages   = {85--103},
+  year    = {1972}
+}
+
+@book{KrajicekBook,
+  author    = {Jan Krajicek},
+  title     = {Bounded Arithmetic, Propositional Logic, and Complexity Theory},
+  publisher = {Cambridge University Press},
+  year      = {1995}
+}
+
+@article{FortnowSanthanam08,
+  author  = {Lance Fortnow and Rahul Santhanam},
+  title   = {Hierarchy Theorems for Probabilistic Polynomial Time},
+  journal = {Journal of the ACM (JACM)},
+  volume  = {55},
+  number  = {3},
+  pages   = {1--20},
+  year    = {2008}
+}
+
+@article{Impagliazzo95,
+  author  = {Russell Impagliazzo},
+  title   = {A personal view of average-case complexity},
+  journal = {Proceedings of the 10th Annual Structure in Complexity Theory Conference},
+  year    = {1995},
+  pages   = {134--147}
+}
+
+@article{Mitchell80,
+  author  = {Tom M. Mitchell},
+  title   = {Self-improving computer programs},
+  journal = {Machine Learning},
+  year    = {1980},
+  volume  = {1},
+  number  = {1},
+  pages   = {1--20}
+}
+
+@article{Schmidhuber07,
+  author  = {Jürgen Schmidhuber},
+  title   = {Gödel Machines: Fully Self-Referential Optimal Universal Self-Improvers},
+  journal = {Fundamenta Informaticae},
+  year    = {2007},
+  volume  = {74},
+  number  = {1},
+  pages   = {87--117}
+}
+
+@article{AaronsonQuantum,
+  author  = {Scott Aaronson},
+  title   = {Quantum Computing and Complexity Theory},
+  journal = {ACM SIGACT News},
+  volume  = {36},
+  number  = {1},
+  pages   = {30--52},
+  year    = {2005}
+}
+
+@article{KolmogorovComplexity,
+  author  = {Ming Li and Paul Vitanyi},
+  title   = {An Introduction to Kolmogorov Complexity and Its Applications},
+  journal = {Springer},
+  year    = {2008}
+}
+
+@misc{Rafig25,
+  author    = {Rafig Huseynzade},
+  title     = {Structurally-Aware Turing Machines and Complexity Barriers},
+  year      = {2025},
+  note      = {Manuscript},
+  howpublished = {\url{https://github.com/rafig-dev/SA-TM}}
+}
+@article{Regev05,
+  author = {Oded Regev},
+  title = {On Lattices, Learning with Errors, Random Linear Codes, and Cryptography},
+  journal = {Journal of the ACM},
+  year = {2005},
+  volume = {56},
+  number = {6},
+  pages = {34}
 }
 
 @book{AroraBarak,
-  author    = {Arora, S. and Barak, B.},
-  title     = {Computational Complexity: A Modern Approach},
+  author = {Sanjeev Arora and Boaz Barak},
+  title = {Computational Complexity: A Modern Approach},
   publisher = {Cambridge University Press},
-  year      = {2009},
-}
-
-@inproceedings{Regev05,
-  author    = {Regev, O.},
-  title     = {On Lattices, Learning with Errors, Random Linear Codes, and Cryptography},
-  booktitle = {STOC ’05},
-  year      = {2005},
-  pages     = {84--93},
+  year = {2009}
 }
 
 @article{Unruh2015,
-  author  = {Unruh, D.},
-  title   = {Non-Interactive Zero-Knowledge Proofs in the Quantum Random Oracle Model},
-  journal = {EUROCRYPT ’15},
-  year    = {2015},
+  author = {Dominique Unruh},
+  title = {Non-interactive Zero-Knowledge Proofs in the Quantum Random Oracle Model},
+  journal = {EUROCRYPT},
+  year = {2015}
 }
 
-@inproceedings{Albrecht17,
-  author    = {Albrecht, M.},
-  title     = {On the LWE and SIS Security Reductions},
-  booktitle = {ASIACRYPT ’17},
-  year      = {2017},
-}
-
-@article{MulmuleySohoni,
-  author  = {Mulmuley, K. D. and Sohoni, M.},
-  title   = {Geometric complexity theory. I. An approach to the P vs. NP and related problems},
-  journal = {SIAM J. Comput.},
-  year    = {2001},
-  volume  = {31},
-  number  = {2},
-  pages   = {496--526},
-}
-
-@book{Krajicek1995,
-  author    = {Krajíček, J.},
-  title     = {Bounded Arithmetic, Propositional Logic, and Complexity Theory},
-  publisher = {Cambridge University Press},
-  year      = {1995},
-}
-
-@article{Regev09,
-  author  = {Regev, O.},
-  title   = {On the Learning with Errors Problem: A Survey},
-  journal = {J. ACM},
-  year    = {2009},
-  volume  = {56},
-  number  = {6},
-  pages   = {34},
-}
-
-@inproceedings{Dilithium2022,
-  author    = {Ducas, L. and Kiltz, E. and Lepoint, T. and Lyubashevsky, V. and Schwabe, P. and Seiler, G.},
-  title     = {CRYSTALS—Dilithium: Lattice-Based Digital Signatures},
-  booktitle = {Cryptology ePrint Archive},
-  year      = {2022},
-  note      = {Report 2022/1297},
-}
-
-@book{AB09,
-  author    = {Sanjeev Arora and Boaz Barak},
-  title     = {Computational Complexity: A Modern Approach},
-  publisher = {Cambridge University Press},
-  year      = {2009},
-  isbn      = {9780521424264}
-}
-
-@book{Sip12,
-  author    = {Michael Sipser},
-  title     = {Introduction to the Theory of Computation},
-  edition   = {3},
-  publisher = {Cengage Learning},
-  year      = {2012},
-  isbn      = {9781133187790}
-}
-
-@article{Raz87,
-  author  = {Razborov, Alexander A.},
-  title   = {Lower bounds for the monotone complexity of some Boolean functions},
-  journal = {Doklady Akademii Nauk SSSR},
-  year    = {1987},
-  volume  = {281},
-  number  = {4},
-  pages   = {798--801},
-  note    = {English translation: \emph{Math. Notes} 41(6):333--338, 1987}
+@article{AB09,
+  author = {Eric Allender and David Mix Barrington},
+  title = {Natural proofs and circuit lower bounds in algebraic complexity},
+  journal = {Journal of Computer and System Sciences},
+  year = {2009}
 }
