Add complete bibliography and fix missing citations (SipserBook, Regev09, etc.)

--- a/refs.bib
+++ b/refs.bib
@@ -157,3 +157,45 @@
   journal = {Journal of Computer and System Sciences},
   year = {2009}
 }
+@article{Regev09,
+  author = {Oded Regev},
+  title = {On Lattices, Learning with Errors, and Cryptography},
+  journal = {J. ACM},
+  year = {2009},
+  volume = {56},
+  number = {6},
+  pages = {34}
+}
+
+@article{Dilithium2022,
+  author = {Vadim Lyubashevsky and Thomas Prest and Gregor Seiler and others},
+  title = {CRYSTALS-Dilithium: Digital Signatures from Module Lattices},
+  journal = {NIST Post-Quantum Cryptography Standardization},
+  year = {2022},
+  note = {Finalist submission}
+}
+
+@article{MulmuleySohoni,
+  author = {Ketan D. Mulmuley and Milind Sohoni},
+  title = {Geometric Complexity Theory I: An Approach to the P vs. NP and Related Problems},
+  journal = {SIAM Journal on Computing},
+  year = {2001},
+  volume = {31},
+  number = {2},
+  pages = {496--526}
+}
+
+@article{Albrecht17,
+  author = {Martin R. Albrecht and others},
+  title = {FPLLL, FPyLLL: Lattice Reduction Libraries},
+  journal = {Mathematical Software – ICMS 2016},
+  year = {2017},
+  note = {arXiv:1606.06185}
+}
+@book{SipserBook,
+  author    = {Michael Sipser},
+  title     = {Introduction to the Theory of Computation},
+  publisher = {Cengage Learning},
+  year      = {2012},
+  edition   = {3rd}
+}
