--- a/refs.bib
+++ b/refs.bib
@@ -125,7 +125,7 @@
   title     = {Structurally-Aware Turing Machines and Complexity Barriers},
   year      = {2025},
   note      = {Manuscript},
-  howpublished = {\url{https://github.com/rafig-dev/SA-TM}}
+  howpublished = {\url{https://github.com/Acloyer/sa-tm-barrier-bypass}}
 }
 @article{Regev05,
   author = {Oded Regev},
