--- a/appendix_algebra.tex
+++ b/appendix_algebra.tex
@@ -1,4 +1,6 @@
-% appendix_algebra.tex
+% Copyright (c) 2025 Rafig Huseynzade. All Rights Reserved.
+% Licensed under CC BY-NC-ND 4.0
+% Original work - do not copy without attribution
 \section{Algebraization: Exponential Degree Lower Bound}
 
 We restate Theorem~\ref{thm:algebra}:
