--- a/appendix_natural.tex
+++ b/appendix_natural.tex
@@ -1,4 +1,6 @@
-% appendix_natural.tex
+% Copyright (c) 2025 Rafig Huseynzade. All Rights Reserved.
+% Licensed under CC BY-NC-ND 4.0
+% Original work - do not copy without attribution
 \section{LWE-Based Pseudo-Natural Property}\label{sec:lwe-app}
 
 Throughout the appendix fix a prime $p=2^{\Theta(n)}$
