--- a/appendix_proof.tex
+++ b/appendix_proof.tex
@@ -1,4 +1,6 @@
-% appendix_proof.tex
+% Copyright (c) 2025 Rafig Huseynzade. All Rights Reserved.
+% Licensed under CC BY-NC-ND 4.0
+% Original work - do not copy without attribution
 \section{Proof-Complexity Lower Bound}
 
 Recall $\tau_n$
