--- a/appendix_relativization.tex
+++ b/appendix_relativization.tex
@@ -1,4 +1,6 @@
-% appendix_relativization.tex
+% Copyright (c) 2025 Rafig Huseynzade. All Rights Reserved.
+% Licensed under CC BY-NC-ND 4.0
+% Original work - do not copy without attribution
 \section{Relativization Barrier Details}
 
 Classical relativizing lower-bound techniques
