--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,8 @@
-% main.tex — Structurally-Aware Turing Machines: Transcending Complexity Barriers (v2.2, 29 Jun 2025)
+% Copyright (c) 2025 Rafig Huseynzade. All Rights Reserved.
+% Licensed under CC BY-NC-ND 4.0
+% Original work - do not copy without attribution
 
+% main.tex — Structurally-Aware Turing Machines: Transcending Complexity Barriers (v2.2, 29 Jun 2025)
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
